Fix font too big on smaller devices

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h6 {
 }
 
 h1 {
-  font-size: 12rem;
+  font-size: 8rem;
   margin-top: 0.5rem;
   margin-bottom: 1rem;
 }
